--- a/html/card_type.html
+++ b/html/card_type.html
@@ -18,7 +18,7 @@
         ------------------------------------------------------------------ -->
         <nav>
             <ul>
-                <li><a href="../html/index.html" class="top">トップ</a></li>
+                <li><a href="../index.html" class="top">トップ</a></li>
                 <li><a href="../html/recording_card.html" class="recording_card">収録カード</a></li>
                 <li><a href="../html/play.html" class="play">遊び方</a></a></li>
                 <li><a href="../html/card_type.html" class="card_type">カード種類</a></a></li>
