--- a/html/download.html
+++ b/html/download.html
@@ -43,7 +43,7 @@
                     <li>PC対応になっている。（スマホでもプレイできるようにする予定）</li>
                 </ul>
                 <video controls width="100%">
-                    <source src="../picture/Fantasy Battle Version 0.1 (DEMO).mp4" type="video/mp4">
+                    <source src="../picture/Version 0.1 (DEMO).mp4" type="video/mp4">
                 </video>
             </div>
         </main>
