--- a/html/download.html
+++ b/html/download.html
@@ -42,6 +42,11 @@
                     <li>時間はあまりないので、VFXを作っていない。</li>
                     <li>PC対応になっている。（スマホでもプレイできるようにする予定）</li>
                 </ul>
+                <h2>Version 0.0.2</h2>
+                <video controls width="100%">
+                    <source src="../picture/Version 0.2 (DEMO).mp4" type="video/mp4">
+                </video>
+                <h2>Version 0.0.1</h2>
                 <video controls width="100%">
                     <source src="../picture/Version 0.1 (DEMO).mp4" type="video/mp4">
                 </video>
